Add profile fixed

--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -22,7 +22,7 @@
                                       Profile Matching (%)
                                   </th>
                                   <th>
-                                      Will Join?
+                                      Joining Probability
                                   </th>
                                   <th>
                                       Candidate Expected Hike
