--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -4,7 +4,7 @@
           <div class="col-md-12">
               <div class="card">
                   <div class="card-header card-header-danger">
-                    <h4 class="card-title mt-0"> Candidate List</h4>
+                    <h4 class="card-title mt-0"> Candidate Matrix</h4>
                     <p class="card-category"> List of candidates and their stats!</p>
                 </div>
                    <div class="card-body">
