--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
                       <div class="card-icon">
                           <i class="material-icons">store</i>
                       </div>
-                      <h6  class="card-category">Total Budget Exausted</h6>
+                      <h6  class="card-category">Total Budget Exhausted</h6>
                       <h3 class="card-title">{{budgetExhausted.toFixed(2)}}L/{{totalBudget}}L</h3>
                   </div>
                   <div class="card-footer">
