--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -30,7 +30,7 @@
                               </div>
                           </div>
                           <div class="row">
-                              <div class="col-md-6">
+                              <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
                                     <mat-label>Gender</mat-label>
                                     <select matNativeControl formControlName="Gender">
@@ -39,6 +39,12 @@
                                         <option value="other">Other</option>
                                       </select>
                                 </mat-form-field>
+                              </div>
+                              <div class="col-md-3">
+                                  <mat-form-field class="example-full-width">
+                                      <mat-label>Number Of Years At Company</mat-label>
+                                      <input matInput formControlName="YearsAtCompany" placeholder="Number Of Companies Worked so far" type="text">
+                                  </mat-form-field>
                               </div>
                               <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
